# Courier-routing-system---Dijkstra-MiniHeap

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
docs/: prezentacio.pptx
include/: courier.h  dijkstra.h  graph.h
src/: dijkstra.c  graph.c  main.c
